--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/MyProject/Blueprints/BP_TestGM.BP_TestGM_C
 GlobalDefaultServerGameMode=None
+ServerDefaultMap=/Game/MyProject/Maps/NetworkMap.NetworkMap
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
