--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=L20251112
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MyProject/Maps/TestMap.TestMap
+EditorStartupMap=/Game/MyProject/Maps/TitleMap.TitleMap
 GameDefaultMap=/Game/MyProject/Maps/TestMap.TestMap
 TransitionMap=
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/MyProject/Blueprints/BP_TestGM.BP_TestGM_C
 GlobalDefaultServerGameMode=None
-ServerDefaultMap=/Game/MyProject/Maps/Lobby.Lobby
+ServerDefaultMap=/Game/MyProject/Maps/TitleMap.TitleMap
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
